Add F99b disassembly